--- a/roles/cloud-bastion/tasks/delete.yaml
+++ b/roles/cloud-bastion/tasks/delete.yaml
@@ -4,6 +4,12 @@
   assert:
     that: ansible_version.full is version('2.8', '>=')
 
+- name: Assert key variables
+  assert:
+    that:
+    - os_auth_url is defined
+    - os_auth_url|length > 0
+
 # Deletes our bastion.
 #
 # On OpenStack this is driven by variables that should be defined by
@@ -16,10 +22,6 @@
       Are you sure you want to delete the '{{ instance_base_name }}' bastion?
       Hit return to delete.
       Hit Ctrl+c and then "a" if you've changed your mind
-
-- name: Assert key variables
-  assert:
-    that: os_auth_url is defined
 
 # No need to detach the volume
 # (we see errors if it's not there anyway)
