--- a/roles/cloud-bastion/tasks/main.yaml
+++ b/roles/cloud-bastion/tasks/main.yaml
@@ -4,6 +4,12 @@
   assert:
     that: ansible_version.full is version('2.8', '>=')
 
+- name: Assert key variables
+  assert:
+    that:
+    - os_auth_url is defined
+    - os_auth_url|length > 0
+
 # On OpenStack this is driven by variables that should be defined by
 # 'sourcing' your OpenStack Keystone file. The initial
 # 'assert' checks that these variables are set.
@@ -14,10 +20,6 @@
       Are you sure you want to create the '{{ instance_base_name }}' bastion?
       Hit return to create.
       Hit Ctrl+c and then "a" if you've changed your mind
-
-- name: Assert key variables
-  assert:
-    that: os_auth_url is defined
 
 # Off we go...
 
