- Adds authentication parameters to bastion

--- a/roles/cloud-bastion/tasks/main.yaml
+++ b/roles/cloud-bastion/tasks/main.yaml
@@ -25,3 +25,4 @@
 
 - include_tasks: create-{{ provider }}-instances.yaml
 - include_tasks: gather-{{ provider }}-facts.yaml
+- include_tasks: install-{{ provider }}-parameters.yaml
