- Adds use of yamllint   Fixes some problems it exposed

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ install:
 - pip install -r build-requirements.txt
 script:
 - ansible-lint site.yaml unsite.yaml
+- yamllint site.yaml unsite.yaml inventory.yaml
+- yamllint group_vars roles
