--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+---
+
 dist: xenial
 language: python
 python:
@@ -9,3 +11,4 @@ script:
 - ansible-lint site.yaml unsite.yaml
 - yamllint site.yaml unsite.yaml inventory.yaml
 - yamllint group_vars roles
+- yamllint .travis.yml
