- An attempt to avoid the intermittent   'Can not create db_info table: database is locked' error   seen using Yum early in the boot process with Ansible 2.8.x

--- a/roles/bastion-apps/tasks/main.yaml
+++ b/roles/bastion-apps/tasks/main.yaml
@@ -20,6 +20,15 @@
     owner: root
     group: root
 
+# Try to defeat the
+# 'Can not create db_info table: database is locked' error
+# seen when we try to install the yum utils.
+# Let's wait here for a minute or so...
+
+- name: Try to avoid 'database is locked' error
+  pause:
+    seconds: 60
+
 - name: Install yum utils
   package:
     name:
