- Displays important variables during delete   (i.e. the basename of the bastion) - Retries instance creation on failure   attempts 5 times with a delay of 30 seconds between each retry

--- a/roles/cloud-bastion/tasks/delete.yaml
+++ b/roles/cloud-bastion/tasks/delete.yaml
@@ -10,6 +10,11 @@
     - os_auth_url is defined
     - os_auth_url|length > 0
 
+- name: Display dangerous variables
+  debug:
+    msg: >-
+      instance_base_name={{ instance_base_name }}
+
 # Deletes our bastion.
 #
 # On OpenStack this is driven by variables that should be defined by
