--- a/roles/cloud-bastion/tasks/create-openstack-instances.yaml
+++ b/roles/cloud-bastion/tasks/create-openstack-instances.yaml
@@ -41,3 +41,7 @@
     timeout: "{{ server_timeout_m|int * 60 }}"
     floating_ips:
     - "{{ bastion_addr }}"
+  register: bastion
+  retries: 5
+  delay: 30
+  until: not bastion.failed
