--- a/roles/cloud-bastion/tasks/delete.yaml
+++ b/roles/cloud-bastion/tasks/delete.yaml
@@ -1,57 +1,3 @@
 ---
 
-- name: Assert Ansible version
-  assert:
-    that: ansible_version.full is version('2.8', '>=')
-
-- name: Assert key variables
-  assert:
-    that:
-    - os_auth_url is defined
-    - os_auth_url|length > 0
-
-- name: Display dangerous variables
-  debug:
-    msg: >-
-      instance_base_name={{ instance_base_name }}
-
-# Deletes our bastion.
-#
-# On OpenStack this is driven by variables that should be defined by
-# 'sourcing' your OpenStack Keystone file. The initial
-# 'assert' checks that these variables are set.
-
-- name: Delete Bastion?
-  pause:
-    prompt: |-
-      Are you sure you want to delete the '{{ instance_base_name }}' bastion?
-      Hit return to delete.
-      Hit Ctrl+c and then "a" if you've changed your mind
-
-# No need to detach the volume
-# (we see errors if it's not there anyway)
-# so just delete the server...
-
-- name: Delete bastion node
-  os_server:
-    auth: "{{ os_auth }}"
-    region_name: "{{ os_region_name }}"
-    name: "{{ instance_base_name }}-bastion"
-    state: absent
-
-- name: Delete cloud public key ({{ instance_base_name }}-key }})
-  os_keypair:
-    auth: "{{ os_auth }}"
-    name: "{{ instance_base_name }}-key"
-    region_name: "{{ os_region_name }}"
-    state: absent
-
-- name: Delete connection command
-  file:
-    path: connect-{{ instance_base_name }}.sh
-    state: absent
-
-- name: Delete local ssh key-pair
-  openssh_keypair:
-    path: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa_{{ instance_base_name }}"
-    state: absent
+- include_tasks: delete-{{ provider }}-instances.yaml
