--- a/roles/cloud-bastion/tasks/create-openstack-instances.yaml
+++ b/roles/cloud-bastion/tasks/create-openstack-instances.yaml
@@ -6,6 +6,16 @@
 # 'sourcing' your OpenStack Keystone file. The initial
 # 'assert' checks that these variables are set.
 
+# On OpenStack this is driven by variables that should be defined by
+# 'sourcing' your OpenStack Keystone file. The initial
+# 'assert' checks that these variables are set.
+
+- name: Assert key variables
+  assert:
+    that:
+      - os_auth_url is defined
+      - os_auth_url|length > 0
+
 - name: Assert cloud variables
   assert:
     that:
