- Opens tcp & udp between all instances on the security group

--- a/roles/cloud-bastion/tasks/create-aws-instances.yaml
+++ b/roles/cloud-bastion/tasks/create-aws-instances.yaml
@@ -51,13 +51,13 @@
       to_port: 22
       cidr_ip: 0.0.0.0/0
     - proto: tcp
-      from_port: 111
-      to_port: 111
-      cidr_ip: "{{ instance_base_name }}-sg"
-    - proto: tcp
-      from_port: 2049
-      to_port: 2049
-      cidr_ip: "{{ instance_base_name }}-sg"
+      ports:
+      - 1-65535
+      group_name: "{{ instance_base_name }}-sg"
+    - proto: udp
+      ports:
+      - 1-65535
+      group_name: "{{ instance_base_name }}-sg"
     tags:
       Name: "{{ instance_base_name }}-bastion"
       graph: "{{ instance_base_name }}"
