--- a/roles/cloud-bastion/tasks/create-openstack-instances.yaml
+++ b/roles/cloud-bastion/tasks/create-openstack-instances.yaml
@@ -13,8 +13,8 @@
 - name: Assert key variables
   assert:
     that:
-      - os_auth_url is defined
-      - os_auth_url|length > 0
+    - os_auth_url is defined
+    - os_auth_url|length > 0
 
 - name: Assert cloud variables
   assert:
@@ -24,9 +24,9 @@
 
 - name: Set private keyfile facts
   set_fact:
-    private_key_filename: id_rsa_{{ instance_base_name }}
+    private_key_filename: id_rsa_{{ instance_base_name }}_{{ provider }}
     private_key_path: >-
-      {{ lookup('env', 'HOME') }}/.ssh/id_rsa_{{ instance_base_name }}
+      {{ lookup('env', 'HOME') }}/.ssh/id_rsa_{{ instance_base_name }}_{{ provider }}
 
 - name: Create local ssh key-pair ({{ private_key_filename }})
   openssh_keypair:
